GPT-2 materials added

--- a/notebooks/Information Extraction (Entity Linking).ipynb
+++ b/notebooks/Information Extraction (Entity Linking).ipynb
@@ -36,10 +36,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ca2103c6-63f3-43a8-972f-8e9778a958ec",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<spacy_dbpedia_spotlight.entity_linker.EntityLinker at 0x7f95e0221b70>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import spacy\n",
     "from spacy import displacy\n",
@@ -63,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f0183e74-481e-4571-8490-b5f212f50bf1",
    "metadata": {},
    "outputs": [],
@@ -94,10 +105,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d64ab248-57d1-4049-bd4e-96742ba066e9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span class=\"tex2jax_ignore\"><div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">Musk bought \n",
+       "<mark class=\"entity\" style=\"background: #ddd; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    Twitter\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">DBPEDIA_ENT\n",
+       " <a style=\"text-decoration: none; color: inherit; font-weight: normal\" href=\"#\">http://dbpedia.org/resource/Twitter</a>\n",
+       "</span>\n",
+       "</mark>\n",
+       ", headquartered in  \n",
+       "<mark class=\"entity\" style=\"background: #ddd; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    San Francisco\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">DBPEDIA_ENT\n",
+       " <a style=\"text-decoration: none; color: inherit; font-weight: normal\" href=\"#\">http://dbpedia.org/resource/San_Francisco</a>\n",
+       "</span>\n",
+       "</mark>\n",
+       ", in October 2022 for the amount of $44 Billion to avoid trial.</div></span>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "displacy.render(doc, style=\"ent\")"
    ]
@@ -190,9 +228,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:py310]",
+   "display_name": "Python [conda env:cs5246]",
    "language": "python",
-   "name": "conda-env-py310-py"
+   "name": "conda-env-cs5246-py"
   },
   "language_info": {
    "codemirror_mode": {
