--- a/notebooks/Information Extraction (Entity Resolution).ipynb
+++ b/notebooks/Information Extraction (Entity Resolution).ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "713a0756-5367-4bb6-a206-9ffa2f060180",
    "metadata": {},
    "outputs": [],
@@ -45,10 +45,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "a3cd3ab1-0528-49de-bd5a-66094ec91fa3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<coreferee.manager.CorefereeBroker at 0x7fca94b2bfd0>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "nlp = spacy.load(\"en_core_web_lg\")\n",
     "\n",
@@ -75,10 +86,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "bdaf0264-829e-423f-b649-d4c6592a5b4d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0: Armstrong(2), he(8), he(29)\n"
+     ]
+    }
+   ],
    "source": [
     "text = \"When Neil Armstrong stepped on the moon, he said: \\\"That's one small step for a man, one giant leap for mankind.\\\" Then he jumped from the last step onto the moon's surface.\"\n",
     "\n",
@@ -102,10 +121,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "fa1e6df2-461d-4821-93f8-5111d5e896e8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Armstrong]\n"
+     ]
+    }
+   ],
    "source": [
     "print(doc._.coref_chains.resolve(doc[8]))"
    ]
@@ -311,9 +338,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:py310]",
+   "display_name": "Python [conda env:cs5246]",
    "language": "python",
-   "name": "conda-env-py310-py"
+   "name": "conda-env-cs5246-py"
   },
   "language_info": {
    "codemirror_mode": {
