--- a/notebooks/Information Extraction (Keyword Extraction).ipynb
+++ b/notebooks/Information Extraction (Keyword Extraction).ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "92827c60-fed4-48a5-bc63-13ade9184c3a",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4ceca2e2-2e19-4e19-bf40-269c9e26fb07",
    "metadata": {},
    "outputs": [],
@@ -82,10 +82,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "aaa38412-a832-47c8-a02d-5d54a7d482b1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pytextrank.base.BaseTextRankFactory at 0x7f7be3dbd9c0>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import spacy\n",
     "import pytextrank\n",
@@ -640,9 +651,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:py310]",
+   "display_name": "Python [conda env:cs5246]",
    "language": "python",
-   "name": "conda-env-py310-py"
+   "name": "conda-env-cs5246-py"
   },
   "language_info": {
    "codemirror_mode": {
