--- a/notebooks/Named Entity Recognition (RNN Data Preparation).ipynb
+++ b/notebooks/Named Entity Recognition (RNN Data Preparation).ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ec61faac-8175-4453-94e1-a1236a5964e6",
    "metadata": {},
    "outputs": [],
@@ -383,9 +383,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:py310]",
+   "display_name": "Python [conda env:cs5246]",
    "language": "python",
-   "name": "conda-env-py310-py"
+   "name": "conda-env-cs5246-py"
   },
   "language_info": {
    "codemirror_mode": {
