--- a/notebooks/Named Entity Recognition (RNN).ipynb
+++ b/notebooks/Named Entity Recognition (RNN).ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "37c26aa3-777b-402f-a144-f14839b19376",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c86f9ab9-9dba-441d-bc18-2af87a265ed6",
    "metadata": {},
    "outputs": [],
@@ -673,9 +673,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:py310]",
+   "display_name": "Python [conda env:cs5246]",
    "language": "python",
-   "name": "conda-env-py310-py"
+   "name": "conda-env-cs5246-py"
   },
   "language_info": {
    "codemirror_mode": {
