--- a/notebooks/Named Entity Recognition (spaCy & NLTK).ipynb
+++ b/notebooks/Named Entity Recognition (spaCy & NLTK).ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "dacda4bd-82ad-4fbb-a0d9-91ece4a9aee6",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7fe38929-2dc7-48ac-b7e4-9f8489d0a6f4",
    "metadata": {},
    "outputs": [],
@@ -285,9 +285,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:py310]",
+   "display_name": "Python [conda env:cs5246]",
    "language": "python",
-   "name": "conda-env-py310-py"
+   "name": "conda-env-cs5246-py"
   },
   "language_info": {
    "codemirror_mode": {
