--- a/notebooks/Neural Networks (Transformer - Basic Architecture).ipynb
+++ b/notebooks/Neural Networks (Transformer - Basic Architecture).ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "050e6d58-d448-4987-88c4-6374f506dfdc",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "55ce55b7-c56b-4153-841a-45da90dccbf6",
    "metadata": {},
    "outputs": [],
@@ -867,9 +867,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:py310]",
+   "display_name": "Python [conda env:cs5246]",
    "language": "python",
-   "name": "conda-env-py310-py"
+   "name": "conda-env-cs5246-py"
   },
   "language_info": {
    "codemirror_mode": {
