--- a/notebooks/Regular Expressions.ipynb
+++ b/notebooks/Regular Expressions.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,9 +137,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cat, cat \n",
+      "\n",
+      "cats \n",
+      "\n",
+      "cat  \n",
+      "\n",
+      "cat \n",
+      "\n",
+      "No match found. \n",
+      "\n",
+      "No match found. \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "show_matches(r'cat', sentence)\n",
     "show_matches(r'cats', sentence)\n",
@@ -151,9 +170,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No match found. \n",
+      "\n",
+      "cat, cat \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "show_matches(r'Cat', sentence)\n",
     "show_matches(r'Cat', sentence, flags=re.IGNORECASE)"
@@ -168,9 +198,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cat, cats \n",
+      "\n",
+      "cat, cat \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "show_matches(r'cats|cat', sentence)\n",
     "show_matches(r'cat|cats', sentence)"
@@ -185,9 +226,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1, 2, 0 \n",
+      "\n",
+      "20 \n",
+      "\n",
+      "No match found. \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "show_matches(r'\\d', sentence)        # Same as: show_matches(r'[0-9]', sentence)\n",
     "show_matches(r'\\d\\d', sentence)      # Same as: show_matches(r'[0-9][0-9]', sentence)\n",
@@ -196,9 +250,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H, a, v, i, n, g, 1, c, a, t, i, s, n, i, c, e, b, u, t, h, a, v, i, n, g, 2, 0, c, a, t, s, i, s, c, r, a, z, y \n",
+      "\n",
+      "Ha, vi, ng, ca, is, ni, ce, bu, ha, vi, ng, 20, ca, ts, is, cr, az \n",
+      "\n",
+      "Hav, ing, cat, nic, but, hav, ing, cat, cra \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "show_matches(r'\\w', sentence)        # Same as: show_matches(r'[a-zA-Z0-9_]', sentence)\n",
     "show_matches(r'\\w\\w', sentence)      # Same as: show_matches(r'[a-zA-Z0-9_][a-zA-Z0-9_]', sentence)\n",
@@ -214,9 +281,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Having \n",
+      "\n",
+      "Having \n",
+      "\n",
+      "No match found. \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "show_matches(r'Having', sentence)\n",
     "show_matches(r'^Having', sentence)\n",
@@ -225,9 +305,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Having 1 dog is nice, but having 20 dogs is crazy!\n"
+     ]
+    }
+   ],
    "source": [
     "print(re.sub(r'cat', 'dog', sentence))"
    ]
@@ -241,9 +329,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sdogter plot shows all the dogegories\n"
+     ]
+    }
+   ],
    "source": [
     "print(re.sub(r'cat', 'dog', 'The scatter plot shows all the categories'))"
    ]
@@ -275,9 +371,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1, 20 \n",
+      "\n",
+      ", , , , , , , 1, , , , , , , , , , , , , , , , , , , , , , , , , , 20, , , , , , , , , , , , , , , ,  \n",
+      "\n",
+      ", , , , , , , 1, , , , , , , , , , , , , , , , , , , , , , , , , , 2, 0, , , , , , , , , , , , , , , ,  \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "show_matches(r'\\d+', sentence)        # Same as: show_matches(r'[0-9]+', sentence)\n",
     "show_matches(r'\\d*', sentence)        # Same as: show_matches(r'[0-9]*', sentence)\n",
@@ -286,9 +395,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ", , , , , , , 1, , , , , , , , , , , , , , , , , , , , , , , , , , 20, , , , , , , , , , , , , , , ,  \n",
+      "\n",
+      "1, 2, 0 \n",
+      "\n",
+      "1, 2, 0 \n",
+      "\n",
+      "20 \n",
+      "\n",
+      "20 \n",
+      "\n",
+      "1, 20 \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "show_matches(r'\\d{,3}', sentence)\n",
     "show_matches(r'\\d{1}', sentence)\n",
@@ -300,9 +428,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Having, 1, cat, is, nice, but, having, 20, cats, is, crazy \n",
+      "\n",
+      "Having, , 1, , cat, , is, , nice, , , but, , having, , 20, , cats, , is, , crazy, ,  \n",
+      "\n",
+      "H, a, v, i, n, g, , 1, , c, a, t, , i, s, , n, i, c, e, , , b, u, t, , h, a, v, i, n, g, , 2, 0, , c, a, t, s, , i, s, , c, r, a, z, y, ,  \n",
+      "\n",
+      "Having, cat, is, nice, but, having, cats, is, crazy \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "show_matches(r'\\w+', sentence)        # Same as: show_matches(r'[a-zA-Z0-9_]+', sentence)\n",
     "show_matches(r'\\w*', sentence)        # Same as: show_matches(r'[a-zA-Z0-9_]*', sentence)\n",
@@ -312,13 +455,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cats \n",
+      "\n",
+      "cat, cats \n",
+      "\n",
+      "cat, cats \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "show_matches(r'cats+', sentence)\n",
     "show_matches(r'cats*', sentence)\n",
     "show_matches(r'cats?', sentence)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Having, , 1, , cat, , is, , nice, , , but, , having, , 20, , cats, , is, , crazy, ,  \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "show_matches(r'\\w*', \"Having 1 cat is nice, but having 20 cats is crazy!\")"
    ]
   },
   {
