--- a/notebooks/Text Preprocessing (POS Tagging).ipynb
+++ b/notebooks/Text Preprocessing (POS Tagging).ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,9 +365,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:py310]",
+   "display_name": "Python [conda env:cs5246]",
    "language": "python",
-   "name": "conda-env-py310-py"
+   "name": "conda-env-cs5246-py"
   },
   "language_info": {
    "codemirror_mode": {
