--- a/notebooks/Document Clustering.ipynb
+++ b/notebooks/Document Clustering.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "bb0bab8a-49d2-46a4-b17f-79dcb5da5cc2",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6d0ee3e4-6563-4cb6-98ae-8a507fe3de8a",
    "metadata": {},
    "outputs": [],
@@ -564,9 +564,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:py310]",
+   "display_name": "cs5246",
    "language": "python",
-   "name": "conda-env-py310-py"
+   "name": "cs5246"
   },
   "language_info": {
    "codemirror_mode": {
@@ -578,7 +578,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
