--- a/notebooks/Wordnet.ipynb
+++ b/notebooks/Wordnet.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c327e9a3",
    "metadata": {},
    "outputs": [],
@@ -805,9 +805,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:py310]",
+   "display_name": "Python [conda env:cs5246]",
    "language": "python",
-   "name": "conda-env-py310-py"
+   "name": "conda-env-cs5246-py"
   },
   "language_info": {
    "codemirror_mode": {
